@@ -6,9 +6,9 @@ HOMEPAGE=http://www.freedesktop.org/wiki/Software/systemd
 IUSE=acl audit cryptsetup doc +firmware-loader gcrypt gudev http introspection kdbus +kmod lzma pam policykit python qrcode +seccomp selinux ssl test vanilla xattr +filecaps abi_x86_32 abi_x86_64 abi_x86_x32 abi_mips_n32 abi_mips_n64 abi_mips_o32 abi_ppc_32 abi_ppc_64 abi_s390_32 abi_s390_64 python_targets_python2_7 python_targets_python3_2 python_targets_python3_3 python_single_target_python2_7 python_single_target_python3_2 python_single_target_python3_3
 KEYWORDS=alpha amd64 arm ia64 ppc ppc64 sparc x86
 LICENSE=GPL-2 LGPL-2.1 MIT public-domain
-PDEPEND=>=sys-apps/dbus-1.6.8-r1:0 >=sys-apps/hwids-20130717-r1[udev] >=sys-fs/udev-init-scripts-25 policykit? ( sys-auth/polkit ) !vanilla? ( sys-apps/gentoo-systemd-integration )
+PDEPEND=>=sys-apps/dbus-1.6.8-r1:0[systemd] >=sys-apps/hwids-20130717-r1[udev] >=sys-fs/udev-init-scripts-25 policykit? ( sys-auth/polkit ) !vanilla? ( sys-apps/gentoo-systemd-integration )
 RDEPEND=>=sys-apps/util-linux-2.20:0= sys-libs/libcap:0= acl? ( sys-apps/acl:0= ) audit? ( >=sys-process/audit-2:0= ) cryptsetup? ( >=sys-fs/cryptsetup-1.6:0= ) gcrypt? ( >=dev-libs/libgcrypt-1.4.5:0= ) gudev? ( >=dev-libs/glib-2.34.3:2=[abi_x86_32(-)?,abi_x86_64(-)?,abi_x86_x32(-)?,abi_mips_n32(-)?,abi_mips_n64(-)?,abi_mips_o32(-)?,abi_ppc_32(-)?,abi_ppc_64(-)?,abi_s390_32(-)?,abi_s390_64(-)?] ) http? ( >=net-libs/libmicrohttpd-0.9.33:0= ssl? ( >=net-libs/gnutls-3.1.4:0= ) ) introspection? ( >=dev-libs/gobject-introspection-1.31.1:0= ) kmod? ( >=sys-apps/kmod-15:0= ) lzma? ( >=app-arch/xz-utils-5.0.5-r1:0=[abi_x86_32(-)?,abi_x86_64(-)?,abi_x86_x32(-)?,abi_mips_n32(-)?,abi_mips_n64(-)?,abi_mips_o32(-)?,abi_ppc_32(-)?,abi_ppc_64(-)?,abi_s390_32(-)?,abi_s390_64(-)?] ) pam? ( virtual/pam:= ) python? ( python_single_target_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) python_single_target_python3_2? ( >=dev-lang/python-3.2.5-r2:3.2 ) python_single_target_python3_3? ( >=dev-lang/python-3.3.2-r2:3.3 ) dev-lang/python-exec:=[python_targets_python2_7(-)?,python_targets_python3_2(-)?,python_targets_python3_3(-)?,python_single_target_python2_7(+)?,python_single_target_python3_2(+)?,python_single_target_python3_3(+)?] ) qrcode? ( media-gfx/qrencode:0= ) seccomp? ( sys-libs/libseccomp:0= ) selinux? ( sys-libs/libselinux:0= ) xattr? ( sys-apps/attr:0= ) abi_x86_32? ( !<=app-emulation/emul-linux-x86-baselibs-20130224-r9 !app-emulation/emul-linux-x86-baselibs[-abi_x86_32(-)] ) >=sys-apps/baselayout-2.2 || ( >=sys-apps/util-linux-2.22 <sys-apps/sysvinit-2.88-r4 ) !sys-auth/nss-myhostname !<sys-libs/glibc-2.14 !sys-fs/udev
 SLOT=0/2
 SRC_URI=http://www.freedesktop.org/software/systemd/systemd-212.tar.xz
 _eclasses_=autotools	82621aada74cb2a492bd8e73d49e9f54	autotools-utils	3727db64c7b960903d5033280f108080	bash-completion-r1	db412e427e3317ffd3e15f17df269c5e	eutils	06133990e861be0fe60c2b428fd025d9	fcaps	c247b6885e1ff14f794a0eb65fb1e8ec	flag-o-matic	9836bc51856bcaffac53c9cd4b59a8be	libtool	52d0e17251d04645ffaa61bfdd858944	linux-info	2b8c53f6065bdee2d757472215a3088f	multibuild	46527a4656956da3d58acff72c9b59b1	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multilib-build	fbb9baa0b4039304643e36e9820fdecf	multilib-minimal	5bbdc77877c1aa3c6bd89ca3f9196d11	multiprocessing	d7f2985a2c76c365ee20269db5261414	pam	aa1ebb3ab720ea04dbbdd6eaaf9554ed	python-single-r1	a71a169a881e0a11d04a7fe12dc39f6e	python-utils-r1	8c66c6dabd0295878b68b40dbd0b087b	systemd	090342761f573a8280dd5aa6b0345f3b	toolchain-funcs	0f1760274637a138b99bb649202ea402	udev	da001465a2e939c93f7ae16947ce3438	user	f54e098dd38ba1c0847a13e685b87747	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=302284b37129a6c9bb19fd2a5d43374f
+_md5_=984232e577c1b8495785886beceebb63
