@@ -1,6 +1,10 @@
 # ChangeLog for sys-apps/systemd
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/systemd/ChangeLog,v 1.297 2014/08/03 18:21:19 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/systemd/ChangeLog,v 1.298 2014/08/07 02:07:37 floppym Exp $
+
+  07 Aug 2014; Mike Gilbert <floppym@gentoo.org> systemd-212-r5.ebuild,
+  systemd-215-r3.ebuild, systemd-9999.ebuild:
+  Depend on sys-apps/dbus[systemd].
 
   03 Aug 2014; Markus Meier <maekke@gentoo.org> systemd-215-r3.ebuild:
   arm stable, bug #517120
